build.gradle: pin javaVersion + javafxVersion in gradle.properties
The build used to discover the latest JDK patch by hitting the Eclipse
Adoptium API at configuration time. Even with the per-invocation cache
added in 5e55cc7321, the call still ran during task configuration, so
the configuration cache could never fully bless those task graphs and
offline builds depended on a network round-trip.

Replace the JsonSlurper closure with two static properties read from
gradle.properties:

- javaVersion=25     — JDK toolchain major
- javafxVersion=25.0.3 — full JavaFX patch triple (major must match)

Drops the JsonSlurper import and ~20 lines of indirection. The four
call sites (downloadJfxMods × 2, downloadJavaFXLocal × 2) now
interpolate the property directly.

Bump procedure documented in README.md "Bumping Java / JavaFX versions"
covering patch vs. major, what to verify, and the curl command for
querying Adoptium when a maintainer needs to know the current latest.

TODO.md item "Remove configuration-time HTTP call to Adoptium" — the
"preferred" pinning option from that note.